--- a/vignettes/main-vignette.Rmd
+++ b/vignettes/main-vignette.Rmd
@@ -1,12 +1,14 @@
 --- 
-title: "Simulating phenotypes and performing GWAS with naturalgwas"
+title: "Simulating phenotypes and evaluating GWAS methods with naturalgwas"
 author: "Olivier François"
 date: '`r Sys.Date()`'
 output:
   rmarkdown::html_vignette: default
   '#pdf_document': default
-vignette: |
-  %\VignetteIndexEntry{Vignette Title} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
+vignette: >
+  \VignetteIndexEntry{Vignette Title} 
+  \VignetteEngine{knitr::rmarkdown} 
+  \VignetteEncoding{UTF-8}
 ---
 
 ```{r setup, include=FALSE} 
